--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <header class="menu">
     <nav class="menu__nav1">
       <div class="menu__nav1-element">
-        <img src="img/goit.png" alt="" width="120px">
+        <img src="img/goit.png" alt="" style="width:120px">
       </div>
       <div class="menu__nav1-element">
         <a href="#">Contact</a>
@@ -33,7 +33,7 @@
 
   <main class="registration">
     <img src="img/goit.png" alt="goit">
-    <form action="" method="get">
+    <form action="#" method="get">
       <h3>Register</h3>
       <label for="first-name"> First name </label>
       <input type="text" placeholder=" Name" id="first-name">
