--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Placeholder title</title>
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
-<body>
 
+<body>
+  <header class="header">
+    <nav class="header__menu">
+      <div class="header__menu1-element">
+        <img class="logo__img" src="img/final_page/goit.png" alt="">
+      </div>
+      <div class="header__menu1-element">
+        <a class="menu__link" href="#">Contacts</a>
+      </div>
+      <div class="header__menu1-element">
+        <a class="menu__link" href="#">About</a>
+      </div>
+    </nav>
+    <nav class="header__menu2">
+      <div class="header__menu2-element">
+        <a class="menu__link" href="#">Register</a>
+      </div>
+      <div class="header__menu2-element">
+        <a class="menu__link" href="#">Log in</a>
+      </div>
+    </nav>
+  </header>
+  <!-- LOG IN -->
+  <main class="log__in">
+    <img class="logo__img2" src="img/final_page/goit.png" alt="">
+    <form action="#" method="get">
+      <h3>Log in</h3>
+      <label for="email">Email</label>
+      <input type="text" placeholder=" 123mail@gmail.com" id="email">
+      <label for="password">Password</label>
+      <input type="password" placeholder=" ******" id="password">
+      <button type="submit">Log In</button>
+    </form>
+  </main>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <p>Command GoIT 2017</p>
+  </footer>
 </body>
+
 </html>
