--- a/src/index.html
+++ b/src/index.html
@@ -31,103 +31,23 @@
     </nav>
   </header>
 
-  <main class="saved-games">
+  <main class="game-summary">
     <img src="img/goit.png" alt="goit" style="width:60px">
-    <div class="saved-game">
-      <svg class="icon" id="Layer_1" viewBox="0 0 128 128" width="20" xmlns="http://www.w3.org/2000/svg">
-        <style>.st0{fill:#ff6c00}.st1{fill:#FFF}
-        </style>
-        <circle class="st0" cx="64" cy="64" r="64"/>
-        <path class="st1" d="M103 29H53c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h50c.6 0 1-.4 1-1V30c0-.6-.4-1-1-1zM103 57H53c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h50c.6 0 1-.4 1-1V58c0-.6-.4-1-1-1zM103 85H53c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h50c.6 0 1-.4 1-1V86c0-.6-.4-1-1-1zM37 29H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V30c0-.6-.4-1-1-1zM37 57H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V58c0-.6-.4-1-1-1zM37 85H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V86c0-.6-.4-1-1-1z"/>
-      </svg>
-       <p>Saved game</p>
+    <h3>Game summary</h3>
+    <p>Game name</p>
+    <div class="score">
+      <ul>
+        <li>Story1
+          <div class="score__number">8</div>
+        </li>
+        <li>Story2
+          <div class="score__number">13</div>
+        </li>
+      </ul>
     </div>
-    <div class="options-info">
-      <div class="options">
-        <div class="saved-game1">
-          <svg class="icon 1" id="saved-game1" viewBox="0 0 128 128" width="20" xmlns="http://www.w3.org/2000/svg">
-            <style>.st0{fill:#ff6c00}.st1{fill:#FFF}
-            </style>
-            <circle class="st0" cx="64" cy="64" r="64"/>
-            <path class="st1" d="M103 29H53c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h50c.6 0 1-.4 1-1V30c0-.6-.4-1-1-1zM103 57H53c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h50c.6 0 1-.4 1-1V58c0-.6-.4-1-1-1zM103 85H53c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h50c.6 0 1-.4 1-1V86c0-.6-.4-1-1-1zM37 29H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V30c0-.6-.4-1-1-1zM37 57H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V58c0-.6-.4-1-1-1zM37 85H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V86c0-.6-.4-1-1-1z"/>
-          </svg>
-           <p>Saved game</p>
-        </div>
-        <div class="create-game1">
-          <svg class="icon 2" id="create-game1" viewBox="0 0 128 128" width="20" xmlns="http://www.w3.org/2000/svg">
-            <style>.st0{fill:#ff6c00;}.st1{fill:#FFF}
-            </style>
-            <circle class="st0" cx="64" cy="64" r="64"/>
-            <path class="st1" d="M103 57H71V25c0-.6-.4-1-1-1H58c-.6 0-1 .4-1 1v32H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h32v32c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V71h32c.6 0 1-.4 1-1V58c0-.6-.4-1-1-1z"/>
-          </svg>
-          <p>Create game</p>
-        </div>
-        <div class="my-account1">
-          <svg class="icon 3" id="my-account1" viewBox="0 0 128 128" width="20" xmlns="http://www.w3.org/2000/svg">
-            <style>.st0{fill:#ff6c00}.st1{fill:#FFF}</style>
-            <circle class="st0" cx="64" cy="64" r="64"/>
-            <path class="st1" d="M103 57h-9.1c-.5 0-.8-.3-1-.7-.7-2.6-1.7-5-3-7.3-.2-.4-.2-.9.1-1.2l6.4-6.4c.4-.4.4-1 0-1.4L88 31.5c-.4-.4-1-.4-1.4 0l-6.4 6.4c-.3.3-.8.4-1.2.2-2.3-1.3-4.7-2.3-7.3-3-.4-.1-.7-.5-.7-1V25c0-.6-.4-1-1-1H58c-.6 0-1 .4-1 1v9.1c0 .5-.3.8-.7 1-2.6.7-5 1.7-7.3 3-.4.2-.9.2-1.2-.1l-6.4-6.4c-.4-.4-1-.4-1.4 0L31.5 40c-.4.4-.4 1 0 1.4l6.4 6.4c.3.3.4.8.2 1.2-1.3 2.3-2.3 4.7-3 7.3-.1.4-.5.7-1 .7H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h9.1c.5 0 .8.3 1 .7.7 2.6 1.7 5 3 7.3.2.4.2.9-.1 1.2l-6.4 6.4c-.4.4-.4 1 0 1.4l8.5 8.5c.4.4 1 .4 1.4 0l6.4-6.4c.3-.3.8-.4 1.2-.2 2.3 1.3 4.7 2.3 7.3 3 .4.1.6.6.6 1.1v9c0 .6.5 1 1.1 1h12c.6 0 .9-.4.9-1v-9c0-.5.4-.9.8-1.1 2.6-.7 5-1.7 7.3-3 .4-.2.9-.2 1.2.1l6.4 6.4c.4.4 1 .4 1.4 0l8.5-8.5c.4-.4.4-1 0-1.4l-6.4-6.4c-.3-.3-.4-.8-.2-1.2 1.3-2.3 2.3-4.6 3-7.2.1-.4.5-.7 1-.7h9.1c.5.1.9-.4.9-1V58c0-.6-.4-1-1-1zM64 82c-9.9 0-18-8.1-18-18s8.1-18 18-18 18 8.1 18 18-8.1 18-18 18z"/>
-          </svg>
-          <p>My account</p>
-        </div>
-      </div>
-      <div class="info">
-        <h3>Saved games</h3>
-        <div class="games">
-          <div class="games__element">
-            <ul>
-              <li>
-                <p> Game_Name _</p>
-                <a href="#">http://link.to.this-game.com</a>
-                <svg class="cross" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 612.043 612.043">
-                  <path d="M397.503 306.01L593.08 110.435c25.27-25.27 25.27-66.213 0-91.482-25.27-25.27-66.213-25.27-91.48 0l-195.578 195.6L110.445 18.973c-25.27-25.27-66.213-25.27-91.482 0s-25.27 66.213 0 91.482L214.54 306.033 18.963 501.61c-25.27 25.27-25.27 66.213 0 91.48 25.27 25.27 66.213 25.27 91.482 0l195.577-195.575L501.6 593.09c25.268 25.27 66.212 25.27 91.48 0 25.27-25.268 25.27-66.212 0-91.48l-195.577-195.6z"/>
-                </svg>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, quasi dolores modi.
-        </p>
-        <div class="statistics">
-          <div class="statistics__element">
-            Stories
-            <p>
-              3
-            </p>
-          </div>
-          <div class="statistics__element">
-            Total effort points
-            <p>
-              13
-            </p>
-          </div>
-          <div class="statistics__element">
-            Created
-            <p>
-              a day ago
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <button type="button" name="button">Create new game</button>
-    <div class="create-game">
-      <svg class="icon 4" id="create-game2" viewBox="0 0 128 128" width="20" xmlns="http://www.w3.org/2000/svg">
-        <style>.st0{fill:#ff6c00;}.st1{fill:#FFF}
-        </style>
-        <circle class="st0" cx="64" cy="64" r="64"/>
-        <path class="st1" d="M103 57H71V25c0-.6-.4-1-1-1H58c-.6 0-1 .4-1 1v32H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h32v32c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V71h32c.6 0 1-.4 1-1V58c0-.6-.4-1-1-1z"/>
-      </svg>
-      <p>Create game</p>
-    </div>
-    <div class="my-account">
-      <svg class="icon 5" id="my-account2" viewBox="0 0 128 128" width="20" xmlns="http://www.w3.org/2000/svg">
-        <style>.st0{fill:#ff6c00}.st1{fill:#FFF}</style>
-        <circle class="st0" cx="64" cy="64" r="64"/>
-        <path class="st1" d="M103 57h-9.1c-.5 0-.8-.3-1-.7-.7-2.6-1.7-5-3-7.3-.2-.4-.2-.9.1-1.2l6.4-6.4c.4-.4.4-1 0-1.4L88 31.5c-.4-.4-1-.4-1.4 0l-6.4 6.4c-.3.3-.8.4-1.2.2-2.3-1.3-4.7-2.3-7.3-3-.4-.1-.7-.5-.7-1V25c0-.6-.4-1-1-1H58c-.6 0-1 .4-1 1v9.1c0 .5-.3.8-.7 1-2.6.7-5 1.7-7.3 3-.4.2-.9.2-1.2-.1l-6.4-6.4c-.4-.4-1-.4-1.4 0L31.5 40c-.4.4-.4 1 0 1.4l6.4 6.4c.3.3.4.8.2 1.2-1.3 2.3-2.3 4.7-3 7.3-.1.4-.5.7-1 .7H25c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h9.1c.5 0 .8.3 1 .7.7 2.6 1.7 5 3 7.3.2.4.2.9-.1 1.2l-6.4 6.4c-.4.4-.4 1 0 1.4l8.5 8.5c.4.4 1 .4 1.4 0l6.4-6.4c.3-.3.8-.4 1.2-.2 2.3 1.3 4.7 2.3 7.3 3 .4.1.6.6.6 1.1v9c0 .6.5 1 1.1 1h12c.6 0 .9-.4.9-1v-9c0-.5.4-.9.8-1.1 2.6-.7 5-1.7 7.3-3 .4-.2.9-.2 1.2.1l6.4 6.4c.4.4 1 .4 1.4 0l8.5-8.5c.4-.4.4-1 0-1.4l-6.4-6.4c-.3-.3-.4-.8-.2-1.2 1.3-2.3 2.3-4.6 3-7.2.1-.4.5-.7 1-.7h9.1c.5.1.9-.4.9-1V58c0-.6-.4-1-1-1zM64 82c-9.9 0-18-8.1-18-18s8.1-18 18-18 18 8.1 18 18-8.1 18-18 18z"/>
-      </svg>
-      <p>My account</p>
+    <div class="buttons">
+      <button class="button-back">Back to game</button>
+      <button class="button-end">End this game</button>
     </div>
   </main>
 
